LLM_on_Kubernetes/level-1/modelPreloader/01-namespace.yaml
---
# namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: llm-serving
---
